force-app/main/default/objects/co_insurance__dlm/fields/co_insurer__c.field-meta.xml
<CustomField>
    <fullName>co_insurer__c</fullName>
    <label>co_insurer</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>co_insurer</labelOverride>
        <masterLabel>co_insurer</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>