force-app/main/default/objects/co_insurance__dlm/fields/participation_percentage__c.field-meta.xml
<CustomField>
    <fullName>participation_percentage__c</fullName>
    <label>participation_percentage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>participation_percentage</labelOverride>
        <masterLabel>participation_percentage</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>