force-app/main/default/objects/co_insurance__dlm/fields/rel_1767084635168_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1767084635168_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>co_insurance_SourceRecordId_map_pack_rel</label>
    <referenceTo>packageinsurance__dlm</referenceTo>
    <relationshipLabel>co_insurance_SourceRecordId_map_pack_rel</relationshipLabel>
    <relationshipName>rel_1767084635168_end</relationshipName>
    <type>Lookup</type>
</CustomField>